# emacs

./: .spacemacs  README.md  emacs.bat  no_spacemacs.emacs
.emacs.d/: .gitignore  .travis-build.sh  .travis.yml  CHANGELOG.org  COMMUNITY.org  CONTRIBUTING.org  README.md  init.el  spacemacs.mk
.emacs.d/.github/: ISSUE_TEMPLATE
.emacs.d/core/banners/: 001-banner.txt  003-banner.txt  004-banner.txt  998-banner.txt
.emacs.d/core/info/: quickhelp.txt
.emacs.d/core/libs/: quelpa.el
.emacs.d/core/templates/: .spacemacs.template  README.org.template  REPORTING.template  packages.el.template
.emacs.d/doc/: BEGINNERS_TUTORIAL.org  CONVENTIONS.org  DOCUMENTATION.org  FAQ.org  LAYERS.org  QUICK_START.org  VIMUSERS.org
.emacs.d/elpa/ace-link-20190407.244/: ace-link-pkg.el
.emacs.d/elpa/define-word-20190128.1559/: define-word-pkg.el
.emacs.d/elpa/evil-unimpaired-0.1pre0.20190415.175529/: evil-unimpaired-pkg.el  evil-unimpaired.el
.emacs.d/elpa/evil-visual-mark-mode-20190116.1557/: evil-visual-mark-mode-autoloads.el
.emacs.d/elpa/hl-todo-20190412.1940/: hl-todo-pkg.el
.emacs.d/layers/: LAYERS.org  auto-layer.el
.emacs.d/layers/fidding/: config.el  funcs.el  keybindings.el  packages.el
.emacs.d/news/: news01.org
.emacs.d/tests/core/: Makefile  core-configuration-layer-ftest.el  core-configuration-layer-utest.el  core-funcs-utest.el  core-release-management-ftest.el  core-spacemacs-buffer-ftest.el  core-spacemacs-ftest.el
00_vscode_install/: font_testcase.txt  readme.txt  vim_keys.txt
00_vscode_install/test_vscode_project/: CMakeLists.txt  test.cpp
(+507 files in other folders)
